# rust-local-lib

./: README.md
greet-consumer/: .gitignore  Cargo.toml
greet-consumer/src/: main.rs
greet-lib/: .gitignore  Cargo.toml
greet-lib/src/: lib.rs
